--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Mahaboob pasha\AppData\Local\Temp\testng-eclipse-1609929690\testng-customsuite.xml</span>
+                    <span>C:\Users\Mahaboob pasha\AppData\Local\Temp\testng-eclipse--1775839768\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.test.EmployeeTests_DataProvider" class="method navigator-link" hash-for-method="getAllEmp">getAllEmp</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="api.test.EmployeeTests" class="method navigator-link" hash-for-method="getAllEmp">getAllEmp</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,7 +121,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">api.test.EmployeeTests_DataProvider</span>
+              <span class="class-name">api.test.EmployeeTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Mahaboob pasha\AppData\Local\Temp\testng-eclipse-1609929690\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Mahaboob pasha\AppData\Local\Temp\testng-eclipse--1775839768\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;api.test.EmployeeTests_DataProvider&quot;&gt;
+      &lt;class name=&quot;api.test.EmployeeTests&quot;&gt;
         &lt;methods&gt;
           &lt;include name=&quot;getAllEmp&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- api.test.EmployeeTests_DataProvider --&gt;
+      &lt;/class&gt; &lt;!-- api.test.EmployeeTests --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -192,8 +192,8 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'getAllEmp')
-data.setCell(0, 2, 'api.test.EmployeeTests_DataProvider')
-data.setCell(0, 3, 4638);
+data.setCell(0, 2, 'api.test.EmployeeTests')
+data.setCell(0, 3, 4584);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -209,6 +209,12 @@ return data;
             <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">getAllEmp</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Status code : 200</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
@@ -217,15 +223,15 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">api.test.EmployeeTests_DataProvider</span>
+              <span class="ignored-class-name">api.test.EmployeeTests</span>
               <div class="ignored-methods-div">
+                <span class="ignored-method-name">deleteEmp</span>
+                <br/>
                 <span class="ignored-method-name">createEmp</span>
                 <br/>
                 <span class="ignored-method-name">updateEmp</span>
                 <br/>
                 <span class="ignored-method-name">getEmp</span>
-                <br/>
-                <span class="ignored-method-name">deleteEmp</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -237,14 +243,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">api.test.EmployeeTests_DataProvider</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">api.test.EmployeeTests</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setupData</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">getAllEmp</span>
-                <span class="method-start">174 ms</span>
+                <span class="method-start">388 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
