--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,15 +4,11 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>api.test.EmployeeTests_DataProvider</td>
+<td>api.test.EmployeeTests</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>updateEmp</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>deleteEmp</td>
@@ -28,6 +24,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>getAllEmp</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>updateEmp</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
