--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,6 +1,6 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>api.test.EmployeeTests.deleteEmp</td></tr>
-<tr><td>api.test.EmployeeTests.createEmp</td></tr>
 <tr><td>api.test.EmployeeTests.updateEmp</td></tr>
+<tr><td>api.test.EmployeeTests.deleteEmp</td></tr>
+<tr><td>api.test.EmployeeTests.getAllEmp</td></tr>
 <tr><td>api.test.EmployeeTests.getEmp</td></tr>
 </table>
