--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Mahaboob pasha\AppData\Local\Temp\testng-eclipse--1775839768\testng-customsuite.xml</span>
+                    <span>C:\Users\Mahaboob pasha\AppData\Local\Temp\testng-eclipse--730121537\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.test.EmployeeTests" class="method navigator-link" hash-for-method="getAllEmp">getAllEmp</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="api.test.EmployeeTests" class="method navigator-link" hash-for-method="createEmp">createEmp</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,9 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="getAllEmp">
-                  </a> <!-- getAllEmp -->
-                  <span class="method-name">getAllEmp</span>
+                  <a name="createEmp">
+                  </a> <!-- createEmp -->
+                  <span class="method-name">createEmp</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Mahaboob pasha\AppData\Local\Temp\testng-eclipse--1775839768\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Mahaboob pasha\AppData\Local\Temp\testng-eclipse--730121537\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +147,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;api.test.EmployeeTests&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;getAllEmp&quot;/&gt;
+          &lt;include name=&quot;createEmp&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- api.test.EmployeeTests --&gt;
     &lt;/classes&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getAllEmp')
+data.setCell(0, 1, 'createEmp')
 data.setCell(0, 2, 'api.test.EmployeeTests')
-data.setCell(0, 3, 4584);
+data.setCell(0, 3, 8166);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -209,12 +209,6 @@ return data;
             <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">getAllEmp</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Status code : 200</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
@@ -225,11 +219,11 @@ return data;
             <div class="ignored-class-div">
               <span class="ignored-class-name">api.test.EmployeeTests</span>
               <div class="ignored-methods-div">
+                <span class="ignored-method-name">updateEmp</span>
+                <br/>
                 <span class="ignored-method-name">deleteEmp</span>
                 <br/>
-                <span class="ignored-method-name">createEmp</span>
-                <br/>
-                <span class="ignored-method-name">updateEmp</span>
+                <span class="ignored-method-name">getAllEmp</span>
                 <br/>
                 <span class="ignored-method-name">getEmp</span>
                 <br/>
@@ -249,8 +243,8 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">getAllEmp</span>
-                <span class="method-start">388 ms</span>
+                <span class="method-name">createEmp</span>
+                <span class="method-start">359 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
