--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97cf6d">  <td>23/12/21 19:53:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeTests.setupData()[pri:0, instance:api.test.EmployeeTests@1a6d8329]">&gt;&gt;setupData</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1293677337</td>   <td></td> </tr>
-<tr bgcolor="97cf6d">  <td>23/12/21 19:53:08</td>   <td>375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeTests.getAllEmp()[pri:1, instance:api.test.EmployeeTests@1a6d8329]">getAllEmp</td> 
-  <td>main@1293677337</td>   <td></td> </tr>
+<tr bgcolor="9fa976">  <td>24/01/04 16:04:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeTests.setupData()[pri:0, instance:api.test.EmployeeTests@7c7b252e]">&gt;&gt;setupData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="9fa976">  <td>24/01/04 16:04:45</td>   <td>348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeTests.createEmp()[pri:2, instance:api.test.EmployeeTests@7c7b252e]">createEmp</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
 </table>
